bad/sub_invalid_types_array_string.example_compiler_output
ERROR
[1mbad/sub_invalid_types_array_string.lat:3:16: [1;31merror: [0;1msubtraction is defined only for int values, not `string[]` and `string`[m
	new string[3] - "abc";
	              [1;32m^[m
